<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/hunt_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hunt_name_et" />
    <Switch
        android:id="@+id/show_points_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="Show Points"
        android:textOff="Off"
        android:textOn="On"/>
    <TextView android:id="@+id/challenges_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenges_text"
        style="@style/HeadingText"/>
    <ListView
        android:id="@+id/challenge_list"
        android:layout_width="wrap_content"
        android:layout_height="386dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/custom_chall_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_chall_button" />
        <Button
            android:id="@+id/premade_chall_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/premade_chall_button" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:id="@+id/custom_chall_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_chall_et" />
    </LinearLayout>

    <Button
        android:id="@+id/create_hunt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_button" />
</LinearLayout>