<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BroadcastActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/broadcast_back_btn"
        android:layout_width="fill_parent"
        android:layout_height="68dp"
        android:text="@string/go_back" />

    <EditText
        android:id="@+id/broadcast_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="@android:dimen/notification_large_icon_width"
        android:autofillHints=""
        android:inputType="textShortMessage">

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>